--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "sentry-auth-oidc"
+name = "muxa1l-sentry-auth-oidc"
 version = "5.0.0"
 description = "OpenID Connect authentication provider for Sentry"
-authors = ["Max Wittig <max.wittig@siemens.com>"]
+authors = ["Max Wittig <max.wittig@siemens.com>", "Mikhail Davydenko <mimih1990@gmail.com>"]
 license = "Apache 2.0"
 readme = "README.rst"
 classifiers = [
