--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,5 +19,7 @@ jobs:
       - uses: abatilo/actions-poetry@v2.0.0
       - name: Publish package
         run: |
+          pip uninstall urllib3
+          pip install --upgrade urllib3
           poetry install -n --no-dev
           poetry publish --build -u __token__ -p ${{ secrets.PYPI_SECRET }}
