--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,6 @@ jobs:
       - uses: abatilo/actions-poetry@v2.0.0
       - name: Publish package
         run: |
-          pip install --upgrade urllib3
+          pip install urllib3==1.26.15
           poetry install -n --no-dev
           poetry publish --build -u __token__ -p ${{ secrets.PYPI_SECRET }}
